<?xml version="1.0"?>
<package format="2">
  <name>proba</name>
  <version>0.1.0</version>
  <description>A package for ARIAC competition.</description>
  <maintainer email="filip.karaj@gmail.com">FER</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nist_gear</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>

